[package]
name = "borrower-operation"
version = "0.1.0"
authors = ["Chinh D.Nguyen <eyescryptoinsights@gmail.com>"]
edition = "2021"

description = "The Active Pool holds the JUNO collateral and ULTRA debt (but not ULTRA tokens) for all active troves."
repository = "https://github.com/notional-labs/UltraStableJuno"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
ultra-base = { path = "../../packages/ultra-base", default-features = false }
ultra-controllers = { path = "../../packages/ultra-controllers", default-features = false }
cw-utils = { version = "1.0.0" }
cw-controllers = { version = "1.0.0" }

[dev-dependencies]
cw-multi-test = { version = "0.13.4" }


