[package]
name = "sorted-troves"
version = "0.1.0"
authors = ["phamminh0811 <1phamminh0811@gmail.com>"]
edition = "2021"

description = "Sorted Troves"
repository = "https://github.com/notional-labs/UltraStableJuno"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = {version = "1.1.3" }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw-controllers = { version = "1.0.0" }
cw-utils = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
ultra-base = { path = "../../packages/ultra-base" }
ultra-controllers = { path = "../../packages/ultra-controllers", default-features = false }

[dev-dependencies]
cw-multi-test = { version = "0.13.4" }