[package]
name = "price-feed-test"
version = "0.1.0"
authors = ["Chinh D.Nguyen <eyescryptoinsights@gmail.com>"]
edition = "2021"

description = "PriceFeed for testnet and development"
repository = "https://github.com/notional-labs/UltraStableJuno"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-storage-plus = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0" }
cw2 = { version = "0.13.4" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
